// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering a relative date handles negative values measured in seconds 1`] = `
<time
  dateTime="2021-04-22T01:08:45Z"
  title="22/04/2021, 9:08 am"
>
  in 35 seconds
</time>
`;

exports[`rendering a relative date handles values greater than a year old 1`] = `
<time
  dateTime="2020-04-22T00:01:25Z"
  title="22/04/2020, 8:01 am"
>
  1 year ago
</time>
`;

exports[`rendering a relative date handles values measured in days 1`] = `
<time
  dateTime="2021-04-18T22:02:01Z"
  title="19/04/2021, 6:02 am"
>
  3 days ago
</time>
`;

exports[`rendering a relative date handles values measured in hours 1`] = `
<time
  dateTime="2021-04-21T22:02:01Z"
  title="22/04/2021, 6:02 am"
>
  3 hours ago
</time>
`;

exports[`rendering a relative date handles values measured in minutes 1`] = `
<time
  dateTime="2021-04-22T01:02:01Z"
  title="22/04/2021, 9:02 am"
>
  6 minutes ago
</time>
`;

exports[`rendering a relative date handles values measured in months 1`] = `
<time
  dateTime="2021-02-01T22:02:01Z"
  title="02/02/2021, 6:02 am"
>
  3 months ago
</time>
`;

exports[`rendering a relative date handles values measured in seconds 1`] = `
<time
  dateTime="2021-04-22T01:08:01Z"
  title="22/04/2021, 9:08 am"
>
  9 seconds ago
</time>
`;

exports[`rendering a relative date handles values measured in weeks 1`] = `
<time
  dateTime="2021-04-01T22:02:01Z"
  title="02/04/2021, 6:02 am"
>
  3 weeks ago
</time>
`;

exports[`rendering a relative date handles values which are less than a second different from the current time 1`] = `
<time
  dateTime="2021-04-22T01:08:10Z"
  title="22/04/2021, 9:08 am"
>
  just now
</time>
`;
